parte grafica più pulita e minimal

--- a/index.html
+++ b/index.html
@@ -36,41 +36,42 @@
       </div>
         <!-- SEZIONE CHE CONTIENE I BOTTONI GENERA ED ANNULLA -->
       <div class="sezione_bottoni">
-         <button id="genera">biglietto</button> <button id="annulla">annulla</button> 
+        
+         <button id="genera">biglietto</button> <button id="annulla">annulla</button> <button onclick="window.print('')">stampa</button>
       </div>
     </div>
      <!-- FINE DEL FORM PER GENERARE IL BIGLIETTO -->
 
-     <div class="biglietto">
+     <div id="bg" class="biglietto">
        <div id="name" class="box_biglietto">
          <h4>Nome passeggero</h4>
-         <h6 id="nomePasseggero" >...............</h6>
+         <h6 id="nomePasseggero" ></h6>
        </div>
 
        <div class="box_biglietto">
         <h4>Carrozza</h4>
-        <h6 id="numeroCarrozza">...............</h6>
+        <h6 id="numeroCarrozza"></h6>
         <h6></h6>
        </div>
 
        <div class="box_biglietto">
         <h4>Codice cp</h4>
-        <h6 id="codiceCp">..............</h6>
+        <h6 id="codiceCp"></h6>
        </div>
 
        <div class="box_biglietto">
         <h4>Tratta in km</h4>
-        <h6 id="kmPercorsi">...............</h6>
+        <h6 id="kmPercorsi"></h6>
        </div>
 
        <div class="box_biglietto">
         <h4>Sconto </h4>
-        <h6 id="scontoApplicato">...............</h6>
+        <h6 id="scontoApplicato"></h6>
        </div>
 
        <div class="box_biglietto">
         <h4>Biglietto</h4>
-        <h6 id="totaleBiglietto">..............</h6>
+        <h6 id="totaleBiglietto"></h6>
        </div>
 
      </div>
